fix ascii art image scale on small mobile

--- a/dark-page.css
+++ b/dark-page.css
@@ -49,7 +49,7 @@
 
 @media (max-width: 400px) {
   .dark-mode pre {
-    font-size: 0.3rem;
+    font-size: 0.3rem !important;
     overflow-x: auto;
     max-width: 100%;
   }
